# snake_game

./: Cargo.toml  LICENSE  Makefile  README.md
src/: boundary.rs  lib.rs  prng.rs  ring_buffer.rs  score.rs  serial.rs  snake.rs  system_time.rs  vga_buffer.rs
src/arch/x86_64/: boot.asm  grub.cfg  long_mode_init.asm  multiboot_header.asm
src/interrupts/: gdt.rs  idt.rs  mod.rs
