[package]
name = "snake_game"
version = "0.1.0"
authors = ["vagrant <vagrant@ubuntu.com>"]

[lib]
crate-type = ["staticlib"]

[dependencies]
volatile = "0.1.0"
spin = "0.5.2"
uart_16550 = "0.2.0"
bit_field = "0.10.0"
x86_64 = "0.9.6"
bitflags = "1.2.1"
pic8259_simple = "0.1.1"
pc-keyboard = "0.5.0"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]
